重构HbaseDemo