@@ -17,20 +17,15 @@
 
 ***
 #### 运行 HBaseDemo 
-**准备** <br>
-1. 在源码中做了如下设置：
-    ```
-    hbaseConf.addResource(new FileInputStream("/opt/cluster_conf/hbase/hbase-site.xml"));
-    ```
-    即从路径/opt/cluster_conf/hbase/hbase-site.xml 中读取配置信息，所以请从集群中获取该配置文件并放置到对应的路径中
-2. 在运行是要么采用export的方式完成认证，要么将认证信息配置到hbase-site.xml中</br>
-
-**运行**<br>
 *假定在dev-demo-1.0-SNAPSHOT.jar所在目录执行*<br>
 ```
-java -Djava.ext.dirs=/usr/hdp/2.2.0.0-2041/hbase/lib/:/usr/hdp/2.2.0.0-2041/hadoop -cp dev-demo-1.0-SNAPSHOT.jar com.tencent.tbds.demo.HBaseDemo test_table
+java -cp dev-demo-1.0-SNAPSHOT.jar:/usr/hdp/2.2.0.0-2041/hbase/lib/* com.tencent.tbds.demo.hbase.HBaseDemo --auth-id <id> --auth-key <key> --zk-list <zookeeper host list> --table-name <table name>
 ```
-其中 test_table 为表名
+参数解释:   
+auth-id: 认证ID  
+auth-key: 认证key  
+zk-list: zookeeper主机列表  
+table-name: hbase表名  
 
 ***
 #### 运行 HDFSDemo 
